# ragbench

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/ragbench/: __init__.py  cli.py  config.py  dataset.py  evaluator.py  metrics.py
tests/: test_config.py  test_dataset.py  test_metrics.py
